--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: knovi_call
-description: A new Flutter project.
+description: Knovi call is one to one video calling plugin by using vonage video calling api.
 version: 0.0.1
 homepage:
 
